# doremi

./: doremi.cabal  stack.yaml
src/: DateTime.hs  Main.hs  Todo.hs
todos/: doremi.yaml
