name:                doremi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/doremi#readme
license:             BSD3
license-file:        LICENSE
author:              Evelyn Schneider
maintainer:          evelyn.eliz.schneider@gmail.com
copyright:           2018 Evelyn Schneider
category:            System
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable doremi
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Todo, DateTime
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lens >= 4.15 && < 5
                     , text >= 1.2 && < 2
                     , process >= 1.6 && < 2
                     , unordered-containers >= 0.2 && < 1
                     , vector >= 0.12 && < 1
                     , yaml >= 0.8 && < 1
                     , text >= 1.2 && < 2
                     , aeson >= 1.2 && < 2
                     , scientific >= 0.3 && < 1
